# cyy_category_matching

./: .gitignore  README.md  bootstrap.py  build-onefile.spec  build.bat  build.sh  build.spec  main.py  mcp_client_config.json  parser.py  paths.py  pyproject.toml  使用说明.txt  运行诊断.bat
.github/workflows/: build.yml
app/: __init__.py  batch.py  batch_match.py  file_io.py  io.py  output.py  path_utils.py
application/services/: __init__.py  matching_service.py
application/use_cases/: __init__.py  batch_match.py
config/: app_config.yaml.example  llm_config.json.example  mcp_client_config.json.example
core/: __init__.py  config.py  embedding.py  llm.py  llm_config.py  loaders.py  matching.py  models.py
core/conf/: __init__.py  __main__.py  llm.py  mcp.py  paths.py
core/config/: __init__.py  __main__.py  deps.py  llm.py  loader.py  mcp.py  paths.py
core/llm/: __init__.py  client.py  llm_config.py  prompt.py
core/utils/: __init__.py  excel_io.py  similarity.py
docs/: REFACTOR_LAYOUT.md
excel/: 原子品类关键词.xlsx  校验过的品牌对应原子品类.xlsx
infrastructure/config/: __init__.py
infrastructure/embedding/: __init__.py  embedding.py
infrastructure/io/: __init__.py
infrastructure/llm/: __init__.py  prompt.py  trace_file.py
infrastructure/mcp/: manager.py
interface/: cli.py
llm/: client.py  llm_config.py  prompt.py  trace_file.py
mcp_client/: __init__.py  config.py  manager.py
models/: __init__.py  schemas.py
parser/: __init__.py  embedding.py  loaders.py  matching.py  models.py
scripts/: build.py
tests/: conftest.py
tests/unit/: __init__.py  test_main.py  test_matching.py  test_models.py  test_schemas.py  test_similarity.py
