[project]
name = "category-matching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "modelscope>=1.11.0",
    "openpyxl>=3.1.0",
    "rapidfuzz>=3.0.0",
    "sentence-transformers>=3.0.0",
    "torch",
    "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
